--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         
         <div class="connection-controls">
             <div class="id-section">
-                <h3>Your ID: <span id="localId">Generating...</span></h3>
+                <h3>Your 6-digit ID: <span id="localId">Generating...</span></h3>
                 <button id="copyId" class="btn">Copy ID</button>
+                <button id="newId" class="btn">Generate New ID</button>
             </div>
             <div class="connect-section">
                 <input type="text" id="remoteId" placeholder="Enter Remote ID">
