--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         </div>
 
         <div class="file-transfer-status" id="fileStatus"></div>
+
+        <div class="connection-status" id="connectionStatus"></div>
     </div>
     <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="peer-connection.js"></script>
