--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="connect-section">
-                    <h3><i class="fas fa-link"></i> Connect to Remote</h3>
+                    <h3 style="margin-left: 70px;"><i class="fas fa-link"></i> Connect to Remote</h3>
                     <div class="connect-input">
                         <input type="text" id="remoteId" placeholder="Enter 6-digit ID">
                         <button id="connectBtn" class="btn btn-primary">
